Various refactoring, to make code more readable